Product page hopefully fixed on mobile

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -560,7 +560,8 @@ footer {
 .productpg-card {
     display: inline-block;
     width: calc(100vw - 25px);
-    height: auto;                                                          
+    height: auto;
+    overflow: hidden;                                                          
     border-radius: 1em 0 0 1em;
     background-color: var(--white);
     margin: 0 0 25px 25px;
@@ -577,8 +578,16 @@ footer {
 }
 
 @media screen and (max-width:1000px) {
+    .productpg-card {
+        display: block;
+    }
+    .img-holder {
+        display: block;
+    }
     .img-holder > img {
-        width: 25vw;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
     }
 }
 
